<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.chaimchaikin.jewishdatetasker.EditActivity">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/LocationChooser"
        android:layout_width="match_parent"
        android:layout_marginTop="10dip"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/ShowingTimes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showing_times_for"
            android:textSize="12sp" >
        </TextView>

        <TextView
            android:id="@+id/LocationName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown_location"
            android:textSize="20sp" >
        </TextView>

        <Button
            android:id="@+id/CustomLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_custom_location"
            android:layout_marginTop="20dip"
            android:onClick="selectLocation" />
        <Button
            android:id="@+id/UseCurrentLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_location"
            android:layout_marginTop="0dip"
            android:onClick="useCurrentLocation" />

        <CheckBox
            android:id="@+id/AutoLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_automatic_location"
            android:layout_marginTop="30dip"
            android:visibility="gone"
            android:onClick="setAutoLocationOn" />
    </LinearLayout>



</RelativeLayout>
